--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,49 @@
-/* You can add global styles to this file, and also import other style files */
+
+:root{
+    --black:#000000;
+    --white:#ffffff;
+    --green:#1EA575;
+    --rose-100:#FCF8F6;
+    --rose-200:#F5EEEC;
+    --rose-300:#CAAFA7;
+    --rose-400:#AD8A85;
+    --rose-500:#87635A;
+    --rose-600:#260F08;
+    --red:#C73B0F;
+}
+body {
+    font-family: "Red Hat Text", sans-serif;
+    font-optical-sizing: auto;
+    background-color: var(--rose-100);
+    margin: 0;
+  }
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
+}
+
+.basic-btn{
+    width: 160px;
+    height: 44px;
+    border-radius: 22px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.add-to-cart-btn{
+    border: 1px solid var(--rose-300);
+    background-color: var(--white);
+    gap: 0.5rem;
+    &:hover{
+        color: var(--red);
+        border: 1px solid var(--red);
+    }
+}
+
+.inc-dec-cart-btn{
+    justify-content: space-between;
+    padding: 0 0.8rem;
+    background-color: var(--red);
+    color: var(--white);
+}
