--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,66 +1,42 @@
-<!-- <button class="basic-btn inc-dec-cart-btn">
-    <img 
-        (mouseover)="changeIcon(true, 'reduceCartHovered')" 
-        (mouseleave)="changeIcon(false, 'reduceCartHovered')" 
-        [src]="variables['reduceCartHovered'] ? 
-        variables.imgUrls.reduceCart: 
-        variables.imgUrls.reduceCartHovered" 
-        alt="" srcset=""
-    >
-    <span>1</span>
-    <img 
-        (mouseover)="changeIcon(true, 'addToCartHovered')" 
-        (mouseleave)="changeIcon(false, 'addToCartHovered')" 
-        [src]="variables['addToCartHovered'] ? 
-        variables.imgUrls.addToCart:  
-        variables.imgUrls.addToCartHovered"  
-        alt="" srcset=""
-    >
-</button>
-
-<button class="basic-btn inc-dec-cart-btn">
-    <img 
-        (mouseover)="changeIcon(true, 'removeFromCart')" 
-        (mouseleave)="changeIcon(false, 'removeFromCart')" 
-        [src]="variables['removeFromCart'] ? 
-        variables.imgUrls.removeFromCart: 
-        variables.imgUrls.removeFromCartHovered" 
-        alt="" srcset=""
-    >
-    <span>1</span>
-    <img 
-        (mouseover)="changeIcon(true, 'addToCartHovered')" 
-        (mouseleave)="changeIcon(false, 'addToCartHovered')" 
-        [src]="variables['addToCartHovered'] ? 
-        variables.imgUrls.addToCart:  
-        variables.imgUrls.addToCartHovered"  
-        alt="" srcset=""
-    >
-</button>
-
-<button class="basic-btn add-to-cart-btn">
-    <img [src]="variables.imgUrls['cartIcon']" alt="" srcset="">
-    <span>Add To Cart</span>
-</button> -->
-
 <div class="container">
     <div class="page-elements">
         <div>
             <h1 class="page-title">Desserts</h1>
         <div class="product-list">
-            @for(product of [1,2,3,4,5,6,7,8,9,10]; track product){
+            @for(product of products | async; track product){
                 <div class="product-item-container">
                     <div class="info-up">
-                        <img class="product-img" src="assets/images/image-baklava-mobile.jpg" alt="cart-item-image">
-                        <button (click)="increaseProductInCart()" class="basic-btn add-to-cart-btn">
-                            <img [src]="variables.imgUrls['cartIcon']" alt="" srcset="">
-                            <span>Add To Cart</span>
-                        </button>
+                        <img class="product-img" [src]="product.image.desktop" alt="cart-item-image">
+                        @if(!(isInCart(product) | async)){
+                            <button (click)="addToCart(product)" class="basic-btn add-to-cart-btn">
+                                <img [src]="variables.imgUrls['cartIcon']" alt="" srcset="">
+                                <span>Add To Cart</span>
+                            </button>
+                        }
+                        @else {
+                            <button class="basic-btn inc-dec-cart-btn">
+                                <img (click)="decreaseQuantity(product)"
+                                    [src]="variables['removeFromCart'] ? 
+                                    variables.imgUrls.removeFromCart: 
+                                    variables.imgUrls.removeFromCartHovered" 
+                                    alt="" srcset=""
+                                >
+                                <span>{{ (getQuantity(product) | async) }}</span>
+                                <img (click)="increaseQuantity(product)"
+                                    (mouseover)="changeIcon(true, 'addToCartHovered')" 
+                                    (mouseleave)="changeIcon(false, 'addToCartHovered')" 
+                                    [src]="variables['addToCartHovered'] ? 
+                                    variables.imgUrls.addToCart:  
+                                    variables.imgUrls.addToCartHovered"  
+                                    alt="" srcset=""
+                                >
+                            </button>
+                        }
                     </div>
                     <div class="info-down">
-                        <span class="product-short-name">Waffle</span>
-                        <h2 class="product-long-name">Waffle with Berries</h2>
-                        <span class="product-price">$6.50</span>
+                        <span class="product-short-name">{{product.category}}</span>
+                        <h2 class="product-long-name">{{product.name}}</h2>
+                        <span class="product-price">${{product.price | currency}}</span>
                     </div>
                 </div>
             }
@@ -69,21 +45,21 @@
         <div class="cart">
             <h1 class="cart-title">Your Cart (7)</h1>
             <div>
-                @for(item of [1,2,3,4,5,6,7,8,9]; track item){
+                @for(item of cart | async; track item){
                     <div class="cart-item">
-                        <h4 class="cart-item-name">Classic Tiramisu</h4>
+                        <h4 class="cart-item-name">{{item.name}}</h4>
                         <div class="item-calculation">
-                            <span class="item-quantity">1x</span>
-                            <span class="item-unit-price"> &#64;$5.50</span>
-                            <span class="total-item-price">$5.50</span>
+                            <span class="item-quantity">{{item.quantity}}x</span>
+                            <span class="item-unit-price"> &#64;${{item.price}}</span>
+                            <span class="total-item-price">${{item.price * item.quantity}}</span>
                         </div>
-                        <img class="cart-item-remove-icon"
-                            (mouseover)="changeIcon(true, 'removeFromCart')" 
-                            (mouseleave)="changeIcon(false, 'removeFromCart')" 
-                            [src]="variables['removeFromCart'] ? 
-                            variables.imgUrls.removeFromCart: 
-                            variables.imgUrls.removeFromCartHovered" 
-                            alt="" srcset=""
+                        <img class="cart-item-remove-icon unfocused"
+                            [src]="variables.imgUrls.removeFromCart"
+                            alt="icon" srcset=""
+                        >
+                        <img (click)="removeFromCart(item.id)" class="cart-item-remove-icon focused"
+                            [src]="variables.imgUrls.removeFromCartHovered" 
+                            alt="icon" srcset=""
                         >
                     </div>
                     <div class="hr"></div>
@@ -95,16 +71,28 @@
                         </div>
                     }
             </div>
-            <div class="cart-total">
-                <span class="cart-total-price">Order Total</span>
-                <h2 class="cart-total-title">$46.50</h2>
-            </div>
-            <div class="delivery-service-tag">
-                <img src="assets/carbon-neutral.svg" alt="" srcset="">
-                <span>This is a <strong>carbon-neutral</strong> delivery</span>
-            </div>
-            <button class="confirm-order-btn">
-                Confirm Order
-            </button>
+            @if ((cart | async)?.length) {
+                <div class="cart-total">
+                    <span class="cart-total-price">Order Total</span>
+                    <h2 class="cart-total-title">${{ totalOrder | async }}</h2>
+                </div>
+                <div class="delivery-service-tag">
+                    <img src="assets/carbon-neutral.svg" alt="" srcset="">
+                    <span>This is a <strong>carbon-neutral</strong> delivery</span>
+                </div>
+                <button (click)="confirmOrder()" class="confirm-order-btn">
+                    Confirm Order
+                </button>
+            }
     </div>
 </div>
+<!-- <div class="modal-container">
+    <div class="modal">
+    <app-modal
+      [cart]="(cart | async) ?? []" 
+      [totalOrder]="totalOrder | async"
+      [variables]="variables"
+      (removeItemFromCart)="removeFromCart($event)">
+    </app-modal>
+    </div>
+  </div> -->
