feat: cart items fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,5 @@ h1,h2,h3,h4,h5,h6{
     background-color: var(--red);
     color: var(--white);
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
