--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -1,88 +1,90 @@
-.cart{
-    display: flex;
-    flex-direction: column;
-    background-color: var(--white);
-    margin-top: 1.5rem;
-    padding: 1rem;
-    gap: 1.5rem;
-    border-radius: 0.5rem;
-    height: fit-content;
-    .cart-title{
-        color: var(--red);
-    }
-    .cart-item{
-        position: relative;
+.mat-dialog-content{
+    overflow: none !important;
+    .cart{
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        // height: 46px;
-        gap: 0.5rem;
-
-        .cart-item-name{
-            color: var(--rose-600);
-            margin: 0;
+        background-color: var(--white);
+        margin-top: 1.5rem;
+        padding: 1rem;
+        gap: 1.5rem;
+        border-radius: 0.5rem;
+        height: fit-content;
+        .cart-title{
+            color: var(--red);
         }
-        .item-calculation{
+        .cart-item{
+            position: relative;
             display: flex;
+            flex-direction: column;
+            justify-content: center;
+            // height: 46px;
             gap: 0.5rem;
-
-            .item-quantity{
-                color: var(--red);
-                font-weight: 600;
+    
+            .cart-item-name{
+                color: var(--rose-600);
+                margin: 0;
             }
-
-            .item-unit-price{
-                color: var(--rose-500);
+            .item-calculation{
+                display: flex;
+                gap: 0.5rem;
+    
+                .item-quantity{
+                    color: var(--red);
+                    font-weight: 600;
+                }
+    
+                .item-unit-price{
+                    color: var(--rose-500);
+                }
+    
+                .total-item-price{
+                    color: var(--rose-500);
+                    font-weight: 500;
+                }
             }
-
-            .total-item-price{
-                color: var(--rose-500);
-                font-weight: 500;
+            .cart-item-remove-icon{
+                position: absolute;
+                right: 0;
             }
+    
         }
-        .cart-item-remove-icon{
-            position: absolute;
-            right: 0;
+        .hr{
+            width: 100%;
+            height: 1px;
+            background-color: var(--rose-200);
+            margin: 1rem 0;
         }
-
+        .cart-total{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .delivery-service-tag{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 1rem 0;
+            background-color: var(--rose-100);
+            border-radius: 0.5rem;
+        }
+        .confirm-order-btn{
+            background-color: var(--red);
+            color: var(--white);
+            height: 52px;
+            font-size: 18px;
+            border: none;
+            border-radius: 26px;
+            width: 100%;
+        }
+        .cart-empty{
+            display: flex;
+            flex-direction: column;
+        }
     }
-    .hr{
-        width: 100%;
-        height: 1px;
-        background-color: var(--rose-200);
-        margin: 1rem 0;
-    }
-    .cart-total{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .delivery-service-tag{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 1rem 0;
-        background-color: var(--rose-100);
-        border-radius: 0.5rem;
-    }
-    .confirm-order-btn{
-        background-color: var(--red);
-        color: var(--white);
-        height: 52px;
-        font-size: 18px;
-        border: none;
-        border-radius: 26px;
-    }
-    .cart-empty{
-        display: flex;
-        flex-direction: column;
-    }
-}
-.modal-container{
-    .modal{
-        margin-top: 15vh;
-        height: 85vh;
-        background-color: white;
-        border-radius: 0.5rem;
+    .modal-container{
+        .modal{
+            background-color: white;
+            border-radius: 0.5rem;
+        }
     }
 }
