--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -35,15 +35,15 @@
                     </div>
                     <div class="info-down">
                         <span class="product-short-name">{{product.category}}</span>
-                        <h2 class="product-long-name">{{product.name}}</h2>
-                        <span class="product-price">${{product.price | currency}}</span>
+                        <h4 class="product-long-name">{{product.name}}</h4>
+                        <span class="product-price">{{product.price | currency}}</span>
                     </div>
                 </div>
             }
         </div>
         </div>
         <div class="cart">
-            <h1 class="cart-title">Your Cart ({{ (cart | async)?.length}})</h1>
+            <h2 class="cart-title">Your Cart ({{ (cart | async)?.length}})</h2>
             <div>
                 @for(item of cart | async; track item){
                     <div class="cart-item">
@@ -66,7 +66,9 @@
                     }
                     @empty {
                         <div class="cart-empty">
-                            <img src="assets/images/illustration-empty-cart.svg" alt="cart-empty-icon" srcset="">
+                            <div class="cart-empty-img">
+                                <img src="assets/images/illustration-empty-cart.svg" alt="cart-empty-icon" srcset="">
+                            </div>
                             <span>Your added items will appear here</span>
                         </div>
                     }
