feat: modal responsiveness

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -2,17 +2,21 @@
   <div class="modal-container">
       <div class="modal">
           <div class="cart">
-              <h1 class="cart-title">Your Cart ({{ (cart | async)?.length}})</h1>
+            <img class="confirmed-icon" src="assets/images/icon-order-confirmed.svg" alt="confirm-order icon" srcset="">
+              <h1 class="cart-title">Order Confirmed</h1>
+              <p class="order-confirmation-message">We hop you enjoy you food!</p>
               @if((cart | async)?.length){
                   <div>
                     <mat-dialog-content>
                       @for(item of cart | async;track item){
                           <div class="cart-item">
-                            <h4 class="cart-item-name">{{ item.name }}</h4>
-                            <div class="item-calculation">
-                              <span class="item-quantity">{{ item.quantity }}x</span>
-                              <span class="item-unit-price"> &#64;${{ item.price }}</span>
-                              <span class="total-item-price">${{ item.price * item.quantity }}</span>
+                            <div class="cart-item-info">
+                              <h4 class="cart-item-name">{{ item.name }}</h4>
+                              <div class="item-calculation">
+                                <span class="item-quantity">{{ item.quantity }}x</span>
+                                <span class="item-unit-price"> &#64;${{ item.price }}</span>
+                                <span class="total-item-price">${{ item.price * item.quantity }}</span>
+                              </div>
                             </div>
                             <img class="cart-item-remove-icon unfocused"
                                  [src]="variables.imgUrls.removeFromCart"
