setup local storage

--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -28,7 +28,7 @@
             width: 48px;
         }
         .cart-title{
-            color: var(--red);
+            color: var(--rose-600);
         }
         .cart-item{
             position: relative;
