--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,10 +1,10 @@
-<div class="mat-dialog-content">
+<div (click)="confirmOrder($event)" class="mat-dialog-content">
   <div class="modal-container">
       <div class="modal">
           <div class="cart">
             <img class="confirmed-icon" src="assets/images/icon-order-confirmed.svg" alt="confirm-order icon" srcset="">
               <h1 class="cart-title">Order Confirmed</h1>
-              <p class="order-confirmation-message">We hop you enjoy you food!</p>
+              <p class="order-confirmation-message">We hope you enjoy you food!</p>
               @if((cart | async)?.length){
                   <div>
                     <mat-dialog-content>
@@ -18,12 +18,6 @@
                                 <span class="total-item-price">${{ item.price * item.quantity }}</span>
                               </div>
                             </div>
-                            <img class="cart-item-remove-icon unfocused"
-                                 [src]="variables.imgUrls.removeFromCart"
-                                 alt="icon">
-                            <img (click)="removeItem(item.id)" class="cart-item-remove-icon focused"
-                                 [src]="variables.imgUrls.removeFromCartHovered" 
-                                 alt="icon">
                           </div>
                       }
                     </mat-dialog-content>
@@ -33,7 +27,7 @@
                       <span class="cart-total-price">Order Total</span>
                       <h2 class="cart-total-title">${{ totalOrder | async }}</h2>
                     </div>
-                    <button class="confirm-order-btn" (click)="confirmOrder()">
+                    <button id="confirmOrder" class="confirm-order-btn">
                       Confirm Order
                     </button>
                   </div>
