--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -28,10 +28,9 @@
                       <h2 class="cart-total-title">${{ totalOrder | async }}</h2>
                     </div>
                     <button id="confirmOrder" class="confirm-order-btn">
-                      Confirm Order
+                      Start new order
                     </button>
                   </div>
-          
               }
             </div>
       </div>
